--- a/style.css
+++ b/style.css
@@ -4,7 +4,10 @@
 }
 
 body{
-    background-color: #8400ff;
+    background: url(./imagens1/fundosite.jpg);
+    background-size: calc(300vmin);
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    transition: 0.4s all;
 }
 
 .titulocreditos{
@@ -45,10 +48,15 @@ body{
 .header{
     text-align: center;
     color: #525252;
-    background-color: #cecece;
+    background-color: #cecece80;
+    backdrop-filter: blur(10px);
+    position: fixed;
+    top: 0;
+    width: 100vw;
+    box-shadow: 2px 2px 30px rgb(124, 77, 124);
 }
 .titulo{
-    padding: 40px;
+    padding: 0px;
     font-size: 50px;
 }
 
@@ -79,24 +87,31 @@ body{
 }
 
 .perfil{
-    background-color: #cecece;
-    height: 400px;
+    background-color: #cecece80;
+    padding: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
     box-shadow: 5px 5px 50px #ffffff;
+    backdrop-filter: blur(10px);
+    margin-top: 100px;
+    border-radius: 20px;
 }
-
+.cred {
+    background-color: #50445c7e;
+    padding-bottom: 60px;
+}
 .banner{
     width: 100%;
     height: 190px;
+    border-radius: 12px;
 
 }
 
 .entrartrabalho{
     text-decoration: none;
     font-size: 30px;
-    color: #8400ff;
+    color: #330055;
     background-color: #dddddd;
     padding: 8px;
     border-radius: 20px;
@@ -106,7 +121,7 @@ body{
 
 .entrartrabalho:hover{
     transition: 1s;
-    color: #8400ff;
+    color: #330055;
     background-color: #a3a3a3;
 }
 .descricao{
@@ -122,7 +137,7 @@ body{
     transition: 0.6s;
 }
 .voltar:hover{
-    color: #8400ff;
+    color: #330055;
     transition: 0.6s;
 }
 
@@ -130,7 +145,8 @@ body{
     width: 200px;
     position: absolute;
     margin-top: 50px;
-    margin-left: -300px;
+    margin-left: -460px;
+    border-radius: 12px;
 }
 
 .perfilconteudo{
@@ -146,398 +162,70 @@ body{
 
 .trabalhos{
     text-decoration: none;
-    font-size: 30px;
-    color: #8400ff;
+    color: #330055;
     background-color: #dddddd;
-    padding: 8px;
+    font-size: 16pt;
+    padding: 12px;
     border-radius: 20px;
     transition: 1s;
 }
 
 .trabalhos:hover{
     transition: 1s;
-    color: #8400ff;
+    color: #330055;
     background-color: #a3a3a3;
 }
 
 .creditos{
     text-decoration: none;
-    font-size: 30px;
-    color: #8400ff;
+    font-size: 16pt;
+    padding: 12px;
+    margin: 10px;
+    color: #330055;
     background-color: #dddddd;
-    padding: 8px;
     border-radius: 20px;
     transition: 1s;
+    position: relative;
+    top: -12px;
+    box-shadow: 2px 2px 30px rgba(124, 77, 124, 0.493);
+
 }
 
 .creditos:hover{
     transition: 1s;
-    color: #8400ff;
+    color: #330055;
     background-color: #a3a3a3;
 }
 
-
-
-@media screen and (min-width: 3840px){
-
-    .titulo{
-        font-size: 150px;
-    }
-    .fotoperfil{
-        width: 600px;
-        margin-left: -600px;
-    }
-
-    .meunome{
-        margin-left: 900px;
-        color: #525252;
-        font-size: 80px;
-    }
-
-    .descricao{
-        color: #525252;
-        font-size: 100px;
-        margin-bottom: 10px;
-    }
-
-    .perfilconteudo{
-        width: 2000px;
-        margin-top: 300px;
-    }
-
-    .perfil{
-        height: 1300px;
-    }
-
-    .banner{
-        width: 100%;
-        height: 450px;
-    }
-
-    .trabalhos{
-        font-size: 100px;
-        padding: 9px;
-    }
-    
-    .creditos{
-        font-size: 100px;
-        padding: 9px;
-    }
+#link-titulo {
+    text-decoration: none;
 
 }
 
-@media screen and (max-width: 900px){
-    .fotoperfil{
-        width: 200px;
-        margin-left: -200px;
-    }
-
-    .meunome{
-        margin-left: 240px;
-        color: #525252;
-    }
-
-    .descricao{
-        color: #525252;
-        font-size: 25px;
-        margin-bottom: 10px;
-    }
-
-    .perfilconteudo{
-        width: 600px;
-        margin-top: 40px;
-    }
-
+#trabalhos-wrapper{
+    margin: auto;
+    margin-top: 100px;
+}
+iframe{
+    width: calc(100vw - 200px);
+    height: calc(100vh - 100px);
+    margin: auto;
+    border-radius: 20px;
+    border: 1px solid #330055;
+    backdrop-filter: blur(12px);
+    box-shadow: 2px 2px 30px rgb(124, 77, 124);
 }
 
-@media screen and (max-width: 690px){
-    .fotoperfil{
-        width: 180px;
-        margin-left: -150px;
-    }
-
-    .meunome{
-        margin-left: 280px;
-        color: #525252;
-        font-size: 20px;
-    }
-
-    .descricao{
-        color: #525252;
-        font-size: 20px;
-        margin-bottom: 10px;
-    }
-
-    .perfilconteudo{
-        width: 500px;
-        margin-top: 40px;
-    }
-
-    .trabalhos{
-        font-size: 25px;
-        padding: 8px;
-    }
-    
-    .creditos{
-        font-size: 25px;
-        padding: 8px;
-    }
+main{
+    margin: auto;
+    width: calc(100vw - 200px);
+    border-radius: 20px;
 }
 
-@media screen and (max-width: 600px){
-    .fotoperfil{
-        width: 130px;
-        margin-left: -110px;
-        margin-top: 90px;
-    }
-
-    .meunome{
-        margin-left: 220px;
-        color: #525252;
-        font-size: 18px;
-    }
-
-    .descricao{
-        color: #525252;
-        font-size: 20px;
-        margin-bottom: 10px;
-    }
-
-    .perfilconteudo{
-        width: 350px;
-        margin-top: 40px;
-    }
-
-    .trabalhos{
-        font-size: 20px;
-        padding: 6px;
-    }
-    
-    .creditos{
-        font-size: 20px;
-        padding: 6px;
+@media screen and (max-width: 500px){
+    body{
+        min-width: 500px;
+        background-size: 2000px;
+        transition: 0.4s all;
     }
 }
-
-@media screen and (max-width: 530px){
-    .fotoperfil{
-        width: 130px;
-        margin-left: -160px;
-        margin-top: 90px;
-    }
-
-    .meunome{
-        margin-left: 120px;
-        color: #525252;
-        font-size: 18px;
-    }
-
-    .descricao{
-        color: #525252;
-        font-size: 20px;
-        margin-bottom: 10px;
-    }
-
-    .perfilconteudo{
-        width: 340px;
-        margin-top: 40px;
-    }
-
-    .trabalhos{
-        font-size: 20px;
-        padding: 6px;
-    }
-    
-    .creditos{
-        font-size: 20px;
-        padding: 6px;
-    }
-}
-
-@media screen and (max-width: 460px){
-    .fotoperfil{
-        width: 80px;
-        margin-left: -140px;
-        margin-top: 130px;
-    }
-
-    .meunome{
-        margin-left: 120px;
-        color: #525252;
-        font-size: 18px;
-    }
-
-    .descricao{
-        color: #525252;
-        font-size: 20px;
-        margin-bottom: 10px;
-    }
-
-    .perfilconteudo{
-        width: 340px;
-        margin-top: 40px;
-    }
-
-    .trabalhos{
-        font-size: 20px;
-        padding: 6px;
-    }
-    
-    .creditos{
-        font-size: 20px;
-        padding: 6px;
-    }
-}
-
-@media screen and (min-width: 3840px){
-    .trabalho{
-        width: 1500px;
-        height: 300px;
-    }
-
-    .titulotrabalho{
-        font-size: 60px;
-        margin-left: 20px;
-    }
-
-    .entrartrabalho{
-        padding: 5px;
-        font-size: 70px;
-    }
-
-    .titulo{
-        padding: 40px;
-        font-size: 120px;
-    }
-
-    .voltar{
-        font-size: 40px;
-    }
-}
-
-@media screen and (min-width: 2000px){
-    .trabalho{
-        width: 1200px;
-        height: 300px;
-    }
-
-    .titulotrabalho{
-        font-size: 60px;
-        margin-left: 20px;
-    }
-
-    .entrartrabalho{
-        padding: 5px;
-        font-size: 70px;
-    }
-
-    .titulo{
-        padding: 40px;
-        font-size: 120px;
-    }
-
-    .voltar{
-        font-size: 40px;
-    }
-}
-
-@media screen and (min-width: 1600px){
-    .trabalho{
-        width: 900px;
-        height: 00px;
-    }
-
-    .titulotrabalho{
-        font-size: 40px;
-        margin-left: 20px;
-    }
-
-    .entrartrabalho{
-        padding: 5px;
-        font-size: 50px;
-    }
-
-    .titulo{
-        padding: 40px;
-        font-size: 120px;
-    }
-
-    .voltar{
-        font-size: 40px;
-    }
-}
-
-@media screen and (max-width: 820px){
-    .trabalho{
-        width: 500px;
-        height: 100px;
-    }
-
-    .titulotrabalho{
-        font-size: 20px;
-        margin-left: 20px;
-    }
-
-    .entrartrabalho{
-        padding: 5px;
-        border-radius: 20px;
-        margin-right: 40px;
-    }
-
-    .titulo{
-        padding: 40px;
-        font-size: 40px;
-    }
-
-}
-
-@media screen and (max-width: 520px){
-    .trabalho{
-        width: 350px;
-        height: 100px;
-    }
-
-    .titulotrabalho{
-        font-size: 16px;
-        margin-left: 20px;
-    }
-
-    .entrartrabalho{
-        padding: 5px;
-        font-size: 20px;
-        margin-right: 20px;
-    }
-
-    .titulo{
-        padding: 40px;
-        font-size: 30px;
-    }
-    
-}
-
-@media screen and (max-width: 400px){
-    .trabalho{
-        width: 270px;
-        height: 100px;
-    }
-
-    .titulotrabalho{
-        font-size: 12px;
-        margin-left: 20px;
-    }
-
-    .entrartrabalho{
-        padding: 5px;
-        font-size: 15px;
-        margin-right: 20px;
-    }
-
-    .titulo{
-        padding: 40px;
-        font-size: 30px;
-    }
-
-    
-}
-
-
