--- a/style.css
+++ b/style.css
@@ -125,9 +125,18 @@ body{
     background-color: #a3a3a3;
 }
 .descricao{
-    color: #525252;
+    color: #330055;
     font-size: 25px;
     margin-bottom: 10px;
+    background-color: #330055;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    backdrop-filter: blur(10px);
+    margin-top: 100px;
+    border-radius: 20px;
+    
 }
 
 .voltar{
@@ -142,9 +151,9 @@ body{
 }
 
 .fotoperfil{
-    width: 200px;
+    width: 340px;
     position: absolute;
-    margin-top: 50px;
+    margin-top: 10px;
     margin-left: -460px;
     border-radius: 12px;
 }
